--- a/config.json
+++ b/config.json
@@ -26,11 +26,11 @@ curl -X POST 'https://firestore-conector-db-gxinhdpssq-ue.a.run.app' \
 }},
 
 {"requestContext": {
-  "settings": {"secretKey": "mySecureSecret"},
+  "settings": {"secretKey": "3lb3rt2905"},
+}
  {
   "instanceId": "8edf19b2-d497-4168-a763-c689f6a47f1e",
   "installationId": "4c8e3648-d325-5ddf-7408-60a4967bff69",
   "memberId": "77aa88bb-2c2c-d3d3-4e4e-ff55aa66bb77",
   "role": "OWNER"
-
 }},
